# GD32F303CDET6_CMake

./: CMakeLists.txt  GD32F30CET6.ld  README.md
